kiva to keevahh

--- a/app/views/contributions/review.html.erb
+++ b/app/views/contributions/review.html.erb
@@ -27,9 +27,9 @@
     </tr>
 </table>
 <div class="col-md-8 pull-left">
-  <h1>Kiva Fact:</h1>
+  <h1>Keevahh Fact:</h1>
   <h2 id="best-contribution">
-    All Kiva loans are made possible by our Field Partners, who vet, administer, and disburse each loan.
+    All Keevahh loans are made possible by our Field Partners, who vet, administer, and disburse each loan.
   </h2>
   <h4>
     Many of our partners are chosen because in addition to lending money, they also offer services such as savings, financial literacy training and empowerment programs.
